# VoxKage

./: .gitignore  .tg_inbound  CLAUDE.md  CLAUDE.md.pre_voxkage  GEMINI.md  LICENSE  README.md  VOXKAGE_DOCUMENTATION.md  cognitiveMCP_server_test_results.txt  cognitiveMCP_testing.txt  command_registry.py  config_loader.py  diag.py  documentation.md  external-file-operations.skill  fix_chat_id.py  main.py  pyproject.toml  requirements.txt  scratch_indent.py  settings_gui.py  setup_telegram.py  test.py  test_cognitive_recurrent.py  test_telegram.py  voxkage-version-check.skill
.agents/: AGENTS.md
automation/: app_launcher.py  browser_control.py  document_parser.py  gmail_manager.py  screenshot.py  spotify_control.py  system_control.py  web_agent.py  youtube_control.py
llm/: agentic_loop.py  constants.py  gemini_client.py  gemini_engine.py  gemini_prompt_builder.py  gemini_repl.py  helpers.py  llm_client.py  mcp_dispatcher.py  memory_manager.py  system_prompt.py  tool_definitions.py  tool_rag.py  tool_registry.py  utils.py
mcp_servers/: browser_server.py  devserver_server.py  download_server.py  email_server.py  file_ops_server.py  file_server.py  github_server.py  gui_server.py  health_server.py  media_server.py  memory_server.py  notify_server.py  os_control_server.py  rag_server.py  system_server.py  task_server.py  telegram_server.py
scripts/: ollama_fallback.py
tg_bridge/: __init__.py  inbound_listener.py  telegram_listener.py
tray/: settings_panel.py  tray_app.py
voice/: commands.py  faster_listen.py  intent_engine.py  semantic_router.py  voice_manager.py
voxkage/: __init__.py  _env.py  autostart.py  cli.py  ipc.py  main.py  paths.py  shield.py  telegram_watcher.py
voxkage/automation/: __init__.py  app_launcher.py  browser_control.py  document_parser.py  gmail_manager.py  screenshot.py  spotify_control.py  system_control.py  web_agent.py  youtube_control.py
voxkage/llm/: __init__.py  agentic_loop.py  constants.py  gemini_client.py  gemini_dispatcher.py  gemini_engine.py  gemini_prompt_builder.py  gemini_repl.py  helpers.py  llm_client.py  mcp_dispatcher.py  system_prompt.py  task_tracker.py  tool_definitions.py  tool_rag.py  tool_registry.py
voxkage/mcp_servers/: __init__.py  browser_server.py  coding_server.py  cognitive_core_server.py  devserver_server.py  download_server.py  email_server.py  file_ops_server.py  file_server.py  github_server.py  gui_server.py  health_server.py  media_server.py  memory_server.py  notify_server.py  os_control_server.py  rag_server.py  session_server.py  system_server.py  task_server.py  telegram_server.py  websearch_server.py
voxkage/mcp_servers/cognitive/: analyzer.py  classification_examples.py  constants.py  cycle.py  evaluation.py  intent.py  learning.py  server.py  storage.py  utils.py
voxkage/plugins/: __init__.py  base.py  clickhouse.py  colab.py  devtools.py  firebase.py  github.py  gmail.py  netlify.py  registry.py  sequential_thinking.py  spotify.py  supabase.py  telegram.py
voxkage/templates/: .env.example  GEMINI.md.template  claude_launcher.js
voxkage/tray/: __init__.py  settings_panel.py  settings_window.py  tray_app.py
