[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voxkage"
version = "1.0.8"
description = "VoxKage — OS-level Agentic AI Assistant. Autonomous · Persistent · Aware."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Ayush Dwivedi"}]
keywords = ["ai", "assistant", "agentic", "os", "automation", "mcp", "gemini"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# ─────────────────────────────────────────────────────────────────────────────
# CORE — always installed.
# Every package here maps directly to an import in an MCP server or cli.py.
# Nothing here is "nice to have" — if it's listed, something breaks without it.
# ─────────────────────────────────────────────────────────────────────────────
dependencies = [
    # Runtime & wiring
    "mcp>=1.0",
    "httpx>=0.27",
    "requests>=2.31",
    "python-dotenv>=1.0",

    # OS integration (Windows)
    "psutil>=5.9",
    "pywin32>=306; sys_platform=='win32'",
    "winshell>=0.6; sys_platform=='win32'",
    "winotify>=1.1; sys_platform=='win32'",
    "pyautogui>=0.9",
    "pywinauto>=0.6; sys_platform=='win32'",
    "pygetwindow>=0.0.9",
    "pycaw>=20240210; sys_platform=='win32'",
    "comtypes>=1.3; sys_platform=='win32'",
    "pyperclip>=1.8",                  # Clipboard paste used by IPC injection

    # Office documents (lightweight, ~15 MB)
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "python-pptx>=0.6",
    "Pillow>=10.0",
    "pystray>=0.19",                   # System tray (native Win32 Shell_NotifyIcon)

    # Web automation — browser_server uses these unconditionally
    # playwright requires a one-time `playwright install chromium` post-install
    # which VoxKage's first-run wizard handles automatically.
    "playwright>=1.40",

    # Document processing — rag_server and file_ops_server import these
    "PyMuPDF>=1.23",                   # fitz — PDF reading (rag_server, file_ops_server)
    "numpy>=1.24",                     # Used by rag_server and sentence-transformers

    # RAG / Semantic Memory — rag_server unconditionally imports all three
    "chromadb>=1.5",
    "sentence-transformers>=3.0",

    # GitHub server
    "gitpython>=3.1",                  # git module (github_server)

    # Plugin API credentials (tiny — ship in core)
    "spotipy>=2.23",
    "PyGithub>=2.1",
    "google-auth>=2.22",
    "google-auth-oauthlib>=1.1",
    "google-api-python-client>=2.100",
    "python-telegram-bot>=20.0",
]

# ─────────────────────────────────────────────────────────────────────────────
# OPTIONAL EXTRAS — for advanced users or specific add-ons
# These are NOT needed for normal VoxKage operation.
# ─────────────────────────────────────────────────────────────────────────────
[project.optional-dependencies]
vision = [
    # Image/screenshot OCR (not used by default servers)
    "opencv-python>=4.8",
    "rapidocr-onnxruntime>=1.3",
    # Total: ~250 MB download
]
docs_plus = [
    # Heavy document conversion (Word↔PDF)
    "docx2pdf>=0.1",
    "pdf2docx>=0.5",
    # Total: ~80 MB download
]
tray = [
    # Optional: rich settings panel UI (PySide6 is NOT needed for the tray icon itself;
    # pystray in core handles that natively). Install this only if you want the
    # graphical settings panel accessible from the tray right-click menu.
    "PySide6>=6.6",
    # Total: ~200 MB download
]
full = [
    "voxkage[rag,vision,browser,docs_plus,tray]",
    # Total: ~1.1 GB download — for power users and developers only
]

[project.urls]
Homepage = "https://github.com/ayushdwivedi001/VoxKage"
Repository = "https://github.com/ayushdwivedi001/VoxKage"

[project.scripts]
voxkage = "voxkage.cli:main"

[project.entry-points."voxkage.plugins"]
telegram = "voxkage.plugins.telegram:TelegramPlugin"
gmail    = "voxkage.plugins.gmail:GmailPlugin"
spotify  = "voxkage.plugins.spotify:SpotifyPlugin"
github   = "voxkage.plugins.github:GitHubPlugin"

[tool.setuptools.packages.find]
include = ["voxkage*"]

[tool.setuptools.package-data]
voxkage = [
    "icons/*.png",
    "icons/*.ico",
    "data/shield_blocklist.json",
    "data/.env.example",
    "templates/*",
]
